Blackpurl/src/objects/Deal_Finance__c.object
<CustomObject>
    <fields>
        <fullName>Co_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co_Buyer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Finances (Co_Buyer)</relationshipLabel>
        <relationshipName>Deal_Finances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Total__c</fullName>
        <label>Deal Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal Finances</relationshipLabel>
        <relationshipName>Deal_Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment__c</fullName>
        <label>Estimated Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_I_Product_Tax_Total__c</fullName>
        <label>F &amp; I Product Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_I_Total__c</fullName>
        <label>F I Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Commission__c</fullName>
        <label>Finance Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Finances</relationshipLabel>
        <relationshipName>Deal_Finances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <label>Loan Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quotation</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Type__c</fullName>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deal Finance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DF-{00000}</displayFormat>
        <label>Deal Finance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Finances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>